--- a/Disconnected/en.lproj/MainStoryboard.storyboard
+++ b/Disconnected/en.lproj/MainStoryboard.storyboard
@@ -19,9 +19,9 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="X8w-d4-dZK">
-                                <rect key="frame" x="318" y="68" width="73" height="28"/>
+                                <rect key="frame" x="357" y="68" width="73" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="连接">
+                                <state key="normal" title="开始">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -113,6 +113,7 @@
                     <connections>
                         <outlet property="flowerView" destination="10" id="13"/>
                         <outlet property="modechoice" destination="5q8-t6-aA1" id="2XP-Sp-eox"/>
+                        <outlet property="recordbtn" destination="X8w-d4-dZK" id="7V5-GZ-gyv"/>
                         <outlet property="switchbtn" destination="cpm-nb-gYG" id="IJE-hJ-krL"/>
                     </connections>
                 </viewController>
